alignment issue fixed in homepage

--- a/src/app/(mainroot)/main.scss
+++ b/src/app/(mainroot)/main.scss
@@ -5,8 +5,8 @@ body {
     max-width: 100vw;
     // margin-left: 5.5rem !important;
     margin-left: 4.5rem !important;
-    margin-top: 6rem;
-    margin-right: 1rem;
+    margin-top: 6rem !important;
+    margin-right: 1rem !important;
     scroll-behavior: smooth;
     // text-align: right;
 }
